<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nieves.fernando.saulshop.RegistrarCliente"
    tools:showIn="@layout/activity_registrar_cliente">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/label_subtitulos"
                android:text="@string/txt_regcli_lbl_nombre"/>

            <EditText
                android:id="@+id/et_cliente_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_regcli_lbl_telefono"
                android:textSize="@dimen/label_subtitulos"/>

            <EditText
                android:id="@+id/et_cliente_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_regcli_lbl_email"
                android:textSize="@dimen/label_subtitulos"/>

            <EditText
                android:id="@+id/et_cliente_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/label_subtitulos"
                android:textAlignment="center"
                android:text="@string/txt_regcli_lbl_imagen"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_fotografia_cliente"
                    android:layout_width="@dimen/imagen_subtamano_ancho"
                    android:layout_height="@dimen/imagen_subtamano_alt" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_regcli_imagen_camara"
                        android:text="@string/txt_regcli_btn_imagen_camara"
                        android:layout_width="@dimen/botones_subtareas_ancho"
                        android:layout_height="@dimen/botones_subtareas_alto" />

                    <Button
                        android:id="@+id/btn_regcli_imagen_galeria"
                        android:text="@string/txt_regcli_btn_imagen_galeria"
                        android:layout_width="@dimen/botones_subtareas_ancho"
                        android:layout_height="@dimen/botones_subtareas_alto" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_regcli_registrar"
                android:text="@string/txt_regcli_btn_registrar"
                android:textSize="@dimen/label_subtitulos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
