<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nieves.fernando.saulshop.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/txt_main_lbl_bienvenida"
            android:textSize="@dimen/label_titulos"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/label_subtitulos"
            android:text="@string/txt_main_lbl_descripcion"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/database_imagen"
            android:id="@+id/img_main_descripcion"
            android:layout_height="@dimen/imagen_subtamano_alt"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_main_lbl_descripcion_2"
            android:textAlignment="center"
            android:textSize="@dimen/label_subtitulos"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
